fixing of nav overlap

--- a/src/index.css
+++ b/src/index.css
@@ -35,6 +35,7 @@ nav {
   /* background-color: #78aba8; */
   /* color: #fff; */
   padding: 15px;
+  z-index: 1;
 
   display: flex;
   flex-direction: row;
